[package]
name = "kali"
version = "0.1.0"
edition = "2018"


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
serde_json = "1.0"

[lib]
name = "kali"
path = "src/lib.rs"